tests/pos/i11644.scala
@main def hello = println("hello, world")
