tests/neg/toplevel-doubledef/moredefs_1.scala
def hello(x: String): Unit =
  println(s"hi, $x")